[gd_scene load_steps=11 format=2]

[ext_resource path="res://assets/Scripts/Menu_Script.gd" type="Script" id=1]
[ext_resource path="res://assets/Texturas/bg.png" type="Texture" id=2]
[ext_resource path="res://assets/Texturas/caster.png" type="Texture" id=3]
[ext_resource path="res://fonts/architect-s-daughter/ArchitectsDaughter.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://assets/Sonidos/Miedo/Edits/conspiracion_menu.ogg" type="AudioStream" id=5]
[ext_resource path="res://assets/Scenes/Checkpoint.tscn" type="PackedScene" id=6]

[sub_resource type="OccluderPolygon2D" id=1]
polygon = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="TileSet" id=2]
0/name = "caster.png 0"
0/texture = ExtResource( 3 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 32, 32 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/occluder = SubResource( 1 )
0/navigation_offset = Vector2( 0, 0 )
0/shapes = [  ]
0/z_index = 0

[sub_resource type="DynamicFont" id=3]
size = 64
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=4]
size = 40
font_data = ExtResource( 4 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 16.4844, 11.4844 )
texture = ExtResource( 2 )
centered = false

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource( 2 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( 0, 0, 0, 1, 0, 0, 2, 0, 0, 3, 0, 0, 4, 0, 0, 5, 0, 0, 6, 0, 0, 7, 0, 0, 8, 0, 0, 9, 0, 0, 10, 0, 0, 11, 0, 0, 12, 0, 0, 13, 0, 0, 14, 0, 0, 15, 0, 0, 16, 0, 0, 17, 0, 0, 18, 0, 0, 19, 0, 0, 20, 0, 0, 21, 0, 0, 22, 0, 0, 23, 0, 0, 24, 0, 0, 25, 0, 0, 26, 0, 0, 27, 0, 0, 28, 0, 0, 29, 0, 0, 30, 0, 0, 31, 0, 0, 32, 0, 0, 33, 0, 0, 34, 0, 0, 35, 0, 0, 36, 0, 0, 37, 0, 0, 38, 0, 0, 39, 0, 0, 40, 0, 0, 41, 0, 0, 42, 0, 0, 43, 0, 0, 44, 0, 0, 45, 0, 0, 46, 0, 0, 47, 0, 0, 48, 0, 0, 49, 0, 0, 50, 0, 0, 51, 0, 0, 52, 0, 0, 53, 0, 0, 54, 0, 0, 55, 0, 0, 56, 0, 0, 57, 0, 0, 58, 0, 0, 59, 0, 0, 60, 0, 0, 61, 0, 0, 62, 0, 0, 63, 0, 0, 64, 0, 0, 65, 0, 0, 65536, 0, 0, 65601, 0, 0, 131072, 0, 0, 131137, 0, 0, 196608, 0, 0, 196673, 0, 0, 262144, 0, 0, 262209, 0, 0, 327680, 0, 0, 327745, 0, 0, 393216, 0, 0, 393281, 0, 0, 458752, 0, 0, 458817, 0, 0, 524288, 0, 0, 524310, 0, 0, 524311, 0, 0, 524312, 0, 0, 524313, 0, 0, 524316, 0, 0, 524317, 0, 0, 524318, 0, 0, 524322, 0, 0, 524323, 0, 0, 524327, 0, 0, 524328, 0, 0, 524329, 0, 0, 524353, 0, 0, 589824, 0, 0, 589846, 0, 0, 589852, 0, 0, 589857, 0, 0, 589860, 0, 0, 589863, 0, 0, 589866, 0, 0, 589889, 0, 0, 655360, 0, 0, 655382, 0, 0, 655388, 0, 0, 655393, 0, 0, 655396, 0, 0, 655399, 0, 0, 655402, 0, 0, 655425, 0, 0, 720896, 0, 0, 720918, 0, 0, 720919, 0, 0, 720920, 0, 0, 720924, 0, 0, 720925, 0, 0, 720929, 0, 0, 720932, 0, 0, 720935, 0, 0, 720938, 0, 0, 720961, 0, 0, 786432, 0, 0, 786454, 0, 0, 786460, 0, 0, 786465, 0, 0, 786466, 0, 0, 786467, 0, 0, 786468, 0, 0, 786471, 0, 0, 786473, 0, 0, 786497, 0, 0, 851968, 0, 0, 851990, 0, 0, 851996, 0, 0, 852001, 0, 0, 852004, 0, 0, 852007, 0, 0, 852010, 0, 0, 852033, 0, 0, 917504, 0, 0, 917526, 0, 0, 917532, 0, 0, 917533, 0, 0, 917534, 0, 0, 917537, 0, 0, 917540, 0, 0, 917543, 0, 0, 917546, 0, 0, 917569, 0, 0, 983040, 0, 0, 983105, 0, 0, 1048576, 0, 0, 1048641, 0, 0, 1114112, 0, 0, 1114177, 0, 0, 1179648, 0, 0, 1179713, 0, 0, 1245184, 0, 0, 1245249, 0, 0, 1310720, 0, 0, 1310744, 0, 0, 1310745, 0, 0, 1310746, 0, 0, 1310747, 0, 0, 1310748, 0, 0, 1310750, 0, 0, 1310753, 0, 0, 1310756, 0, 0, 1310757, 0, 0, 1310758, 0, 0, 1310785, 0, 0, 1376256, 0, 0, 1376282, 0, 0, 1376286, 0, 0, 1376289, 0, 0, 1376292, 0, 0, 1376321, 0, 0, 1441792, 0, 0, 1441818, 0, 0, 1441822, 0, 0, 1441825, 0, 0, 1441828, 0, 0, 1441857, 0, 0, 1507328, 0, 0, 1507354, 0, 0, 1507358, 0, 0, 1507359, 0, 0, 1507360, 0, 0, 1507361, 0, 0, 1507364, 0, 0, 1507365, 0, 0, 1507393, 0, 0, 1572864, 0, 0, 1572890, 0, 0, 1572894, 0, 0, 1572897, 0, 0, 1572900, 0, 0, 1572929, 0, 0, 1638400, 0, 0, 1638426, 0, 0, 1638430, 0, 0, 1638433, 0, 0, 1638436, 0, 0, 1638465, 0, 0, 1703936, 0, 0, 1703962, 0, 0, 1703966, 0, 0, 1703969, 0, 0, 1703972, 0, 0, 1703973, 0, 0, 1703974, 0, 0, 1704001, 0, 0, 1769472, 0, 0, 1769537, 0, 0, 1835008, 0, 0, 1835073, 0, 0, 1900544, 0, 0, 1900609, 0, 0, 1966080, 0, 0, 1966145, 0, 0, 2031616, 0, 0, 2031681, 0, 0, 2097152, 0, 0, 2097174, 0, 0, 2097175, 0, 0, 2097176, 0, 0, 2097181, 0, 0, 2097182, 0, 0, 2097186, 0, 0, 2097187, 0, 0, 2097188, 0, 0, 2097192, 0, 0, 2097195, 0, 0, 2097217, 0, 0, 2162688, 0, 0, 2162710, 0, 0, 2162713, 0, 0, 2162716, 0, 0, 2162719, 0, 0, 2162722, 0, 0, 2162725, 0, 0, 2162728, 0, 0, 2162730, 0, 0, 2162753, 0, 0, 2228224, 0, 0, 2228246, 0, 0, 2228249, 0, 0, 2228252, 0, 0, 2228255, 0, 0, 2228258, 0, 0, 2228261, 0, 0, 2228264, 0, 0, 2228265, 0, 0, 2228289, 0, 0, 2293760, 0, 0, 2293782, 0, 0, 2293785, 0, 0, 2293788, 0, 0, 2293791, 0, 0, 2293794, 0, 0, 2293797, 0, 0, 2293800, 0, 0, 2293801, 0, 0, 2293825, 0, 0, 2359296, 0, 0, 2359318, 0, 0, 2359321, 0, 0, 2359324, 0, 0, 2359325, 0, 0, 2359326, 0, 0, 2359327, 0, 0, 2359330, 0, 0, 2359332, 0, 0, 2359336, 0, 0, 2359338, 0, 0, 2359361, 0, 0, 2424832, 0, 0, 2424854, 0, 0, 2424857, 0, 0, 2424860, 0, 0, 2424863, 0, 0, 2424866, 0, 0, 2424869, 0, 0, 2424872, 0, 0, 2424875, 0, 0, 2424897, 0, 0, 2490368, 0, 0, 2490390, 0, 0, 2490391, 0, 0, 2490392, 0, 0, 2490396, 0, 0, 2490399, 0, 0, 2490402, 0, 0, 2490405, 0, 0, 2490408, 0, 0, 2490411, 0, 0, 2490433, 0, 0, 2555904, 0, 0, 2555969, 0, 0, 2621440, 0, 0, 2621505, 0, 0, 2686976, 0, 0, 2687041, 0, 0, 2752512, 0, 0, 2752516, 0, 0, 2752517, 0, 0, 2752518, 0, 0, 2752519, 0, 0, 2752520, 0, 0, 2752521, 0, 0, 2752522, 0, 0, 2752523, 0, 0, 2752524, 0, 0, 2752525, 0, 0, 2752526, 0, 0, 2752527, 0, 0, 2752528, 0, 0, 2752529, 0, 0, 2752559, 0, 0, 2752560, 0, 0, 2752561, 0, 0, 2752562, 0, 0, 2752563, 0, 0, 2752564, 0, 0, 2752565, 0, 0, 2752566, 0, 0, 2752567, 0, 0, 2752568, 0, 0, 2752569, 0, 0, 2752570, 0, 0, 2752571, 0, 0, 2752572, 0, 0, 2752573, 0, 0, 2752574, 0, 0, 2752577, 0, 0, 2818048, 0, 0, 2818113, 0, 0, 2883584, 0, 0, 2883610, 0, 0, 2883611, 0, 0, 2883612, 0, 0, 2883613, 0, 0, 2883614, 0, 0, 2883615, 0, 0, 2883616, 0, 0, 2883617, 0, 0, 2883618, 0, 0, 2883619, 0, 0, 2883620, 0, 0, 2883621, 0, 0, 2883622, 0, 0, 2883623, 0, 0, 2883624, 0, 0, 2883625, 0, 0, 2883649, 0, 0, 2949120, 0, 0, 2949121, 0, 0, 2949122, 0, 0, 2949123, 0, 0, 2949124, 0, 0, 2949125, 0, 0, 2949126, 0, 0, 2949127, 0, 0, 2949128, 0, 0, 2949129, 0, 0, 2949130, 0, 0, 2949131, 0, 0, 2949132, 0, 0, 2949133, 0, 0, 2949134, 0, 0, 2949135, 0, 0, 2949136, 0, 0, 2949137, 0, 0, 2949138, 0, 0, 2949139, 0, 0, 2949140, 0, 0, 2949141, 0, 0, 2949142, 0, 0, 2949143, 0, 0, 2949144, 0, 0, 2949145, 0, 0, 2949146, 0, 0, 2949147, 0, 0, 2949148, 0, 0, 2949149, 0, 0, 2949150, 0, 0, 2949151, 0, 0, 2949152, 0, 0, 2949153, 0, 0, 2949154, 0, 0, 2949155, 0, 0, 2949156, 0, 0, 2949157, 0, 0, 2949158, 0, 0, 2949159, 0, 0, 2949160, 0, 0, 2949161, 0, 0, 2949162, 0, 0, 2949163, 0, 0, 2949164, 0, 0, 2949165, 0, 0, 2949166, 0, 0, 2949167, 0, 0, 2949168, 0, 0, 2949169, 0, 0, 2949170, 0, 0, 2949171, 0, 0, 2949172, 0, 0, 2949173, 0, 0, 2949174, 0, 0, 2949175, 0, 0, 2949176, 0, 0, 2949177, 0, 0, 2949178, 0, 0, 2949179, 0, 0, 2949180, 0, 0, 2949181, 0, 0, 2949182, 0, 0, 2949183, 0, 0, 2949184, 0, 0, 2949185, 0, 0 )

[node name="Start_Button" type="Button" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 130.0
margin_top = 524.0
margin_right = 579.0
margin_bottom = 641.0
custom_fonts/font = SubResource( 3 )
text = "Iniciar juego"
flat = true

[node name="Exit_Button" type="Button" parent="."]
margin_left = 1500.0
margin_top = 1260.0
margin_right = 2020.0
margin_bottom = 1377.0
custom_fonts/font = SubResource( 3 )
text = "Salir del juego"
flat = true

[node name="HowTo_Button" type="Button" parent="."]
margin_left = 850.0
margin_top = 1320.0
margin_right = 1306.0
margin_bottom = 1437.0
custom_fonts/font = SubResource( 3 )
text = "Cómo jugar"
flat = true

[node name="Sonido_Menu" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
bus = "Menu"

[node name="CanvasModulate" type="CanvasModulate" parent="."]
visible = false
color = Color( 0.0392157, 0.0392157, 0.0392157, 1 )

[node name="Luz" type="Node2D" parent="."]
editor/display_folded = true
position = Vector2( 1580, 560 )

[node name="Light2D" parent="Luz" instance=ExtResource( 6 )]
scale = Vector2( 1.5, 1.5 )
color = Color( 0.65098, 0.12549, 0.12549, 1 )
energy = 2.0
shadow_gradient_length = 40.0

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0
zoom = Vector2( 1.76, 1.989 )

[node name="FadeOutTimer" type="Timer" parent="."]
wait_time = 0.1

[node name="FadeInTimer" type="Timer" parent="."]
wait_time = 0.1

[node name="Introduction" type="Label" parent="."]
visible = false
anchor_right = 1.0
margin_left = 140.0
margin_top = 90.0
margin_right = 816.0
margin_bottom = 1455.0
custom_fonts/font = SubResource( 4 )
text = "Bienvenido a \"Fear the Dark\", un juego de suspenso/exploración en el cuál tu
objetivo es escapar del enorme laberinto en el que te encuentras.
Se recomienda usar audífonos para tener la mejor experiencia
Utiliza a tu ventaja los proyectiles de tu cañón generador de luz y ten en cuenta
sus trayectorias y las sombras que se generan en el laberinto.
A parte de tus proyectiles cuentas con bengalas azules que te servirán para
marcar lugares, pero ten cuidado ya que las bengalas son limitadas; para obtener
más tendrás que llegar a puntos de recarga distribuídos en el laberinto.
No te tardes mucho y lo más importante... cuídate de la oscuridad.
Controles:
Apuntar - Mouse
Proyectiles - Click Izq
Bengalas - Click Der
Adelante - W
Atrás - S"
[connection signal="pressed" from="Start_Button" to="." method="_on_Start_Button_pressed"]
[connection signal="pressed" from="Exit_Button" to="." method="_on_Exit_Button_pressed"]
[connection signal="pressed" from="HowTo_Button" to="." method="_on_HowTo_Button_pressed"]
[connection signal="timeout" from="FadeOutTimer" to="." method="_on_FadeOutTimer_timeout"]
[connection signal="timeout" from="FadeInTimer" to="." method="_on_FadeInTimer_timeout"]
